# urh-ng

./: .gitignore  CONTRIBUTING_DECODERS.md  CONTRIBUTORS.md  CRYPTO_TOOLKIT.md  README.md  pyproject.toml  setup.py
.github/workflows/: build_urh_deb.yml
data/: check_native_backends.py
src/urh/: main.py  settings.py  version.py
src/urh/ainterpretation/: AutoInterpretation.py
src/urh/awre/: FrameAnalyzer.py  ProtocolMatcher.py  protocol_db.py
src/urh/controller/: CompareFrameController.py  MainController.py
src/urh/controller/dialogs/: DecoderDialog.py  KeeLoqDialog.py  ProtocolMatchDialog.py  SpectrumDialogController.py
src/urh/controller/widgets/: DeviceSettingsWidget.py  SniffSettingsWidget.py
src/urh/dev/: BackendHandler.py  VirtualDevice.py  config.py
src/urh/dev/native/: Devicewp.py  ExtensionHelper.py  Harogic.py  HydraSDR.py  SignalHound.py
src/urh/dev/native/lib/: chydrasdr.pxd  harogic.pyx  hydrasdr.pyx  signalhound.py
src/urh/models/: TableModel.py
src/urh/signalprocessing/: Encoding.py  MessageType.py  Ruleset.py
src/urh/simulator/: SimulatorExpressionParser.py
src/urh/ui/: ui_main.py  ui_send_recv_device_settings.py
src/urh/ui/painting/: GridScene.py
src/urh/util/: CryptoToolkit.py  KeeLoq.py  ProjectManager.py
tests/: test_util.py
tests/auto_interpretation/: test_auto_interpretation_integration.py  test_modulation_detection.py
